--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "signalk-to-batch-points",
+  "name": "signalk-batcher",
   "version": "1.0.0",
   "description": "Signal K helper for plugins that need to batch deltas as data points over a time interval",
   "main": "index.js",
-  "repository": "https://github.com/c33howard/signalk-to-batch-points.git",
+  "repository": "https://github.com/c33howard/signalk-batcher.git",
   "author": "Craig Howard <craig@choward.ca>",
   "license": "Apache-2.0",
   "scripts": {
